EST-49: Homepage adjutments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ permalink: "/"
 <section id="section-02" class="section">
   <div class="grid-container">
     <div class="grid-x align-center-middle margin-bottom-2">
-      <div class="cell medium-6">
+      <div class="cell medium-8">
         <h2 class="text-center u-text-bold">Reduce costs. Increase flexibility. Deliver better.</h2>
         <p class="text-center h5 u-trailer">
           Esteemed pre-screens the bench for tough hires for you.
@@ -34,7 +34,7 @@ permalink: "/"
         <img class="width-75" src="/img/mobile-profiles.svg">
       </div>
       <div class="cell medium-6">
-        <h3 class="u-text-bold">Talent Management</h3>
+        <h3 class="u-text-medium">Talent Management</h3>
         <p class="h5 margin-bottom-2">The Esteemed Talent Network provides instant access to thousands of pre-screened digital professionals in hard-to-hire specialties.</p>
         <p class="h5 margin-bottom-2">Our experienced Technical Leads present qualified talent and collaborate closely to ensure clients find the right fit fast.</p>
         <a href="#contact-form" class="button__no-bg" href="">Get Started</a>
@@ -47,7 +47,7 @@ permalink: "/"
   <div class="grid-container">
     <div class="grid-x grid-padding-x align-middle">
       <div class="cell medium-6 small-order-2 medium-order-1">
-        <h3 class="u-text-bold">Expand capacity instantly</h3>
+        <h3 class="u-text-medium">Expand capacity instantly</h3>
         <p class="h5 margin-bottom-2">Esteemed collaborates via the tools you already use like Slack. All subscribers receive a dedicated channel and Team Lead.</p>
         <p class="h5 margin-bottom-2">Make requests and be connected to qualified candidates within 30 minutes* and be working within the hour, guaranteed.</p>
         <a href="#contact-form" class="button__no-bg" href="">Subscribe now</a>
@@ -66,7 +66,7 @@ permalink: "/"
         <img class="width-75" src="/img/trusted-advisors.svg">
       </div>
       <div class="cell medium-6">
-        <h3 class="u-text-bold">Trusted advisors</h3>
+        <h3 class="u-text-medium">Trusted advisors</h3>
         <p class="h5 margin-bottom-2">Esteemed offers access to managers from technical team leads to product or category consultants, to fractional executives.</p>
         <p class="h5 margin-bottom-2">Whatever resources and advice you need to grow your business, just make a request and we'll make the connection.</p>
         <a href="/pricing/" class="button__no-bg" href="">Learn more</a>
@@ -114,7 +114,7 @@ permalink: "/"
     <div class="grid-x grid-padding-x align-middle">
       <div class="cell medium-6">
         <img class="esteemed-talent-logo margin-bottom-1" src="/img/esteemed-talent-logo.svg">
-        <h3 class="margin-bottom-1 width-75"><span class="u-text-bold">You plan digital projects every day. Plan your team with</span> esteemed talent.</h3>
+        <h3 class="margin-bottom-1 width-75"><span class="u-text-medium">You plan digital projects every day. Plan your team with</span> esteemed talent.</h3>
         <p class="h6 margin-bottom-2">By combining human insight with cutting-edge tools and automation, <strong>esteemed talent</strong> powers your staffing landscape. Streamline your delivery model, grow with confidence and get reliable talent on-demand.</p>
         <p class="h6 margin-bottom-2">Your esteemed team is made up of experienced managers and engineers who can help you achieve your goals.</p>
         <a href="#contact-form" href="" class="button black button__small">Subscribe Now</a>
