Atomic punctuation changes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ permalink: "/"
         <div class="simple-card simple-card--narrow">
           <div class="simple-card__image text-center"><img src="/img/icon-agencies.svg"></div>
           <h4 class="simple-card__header u-text-bold">For Agencies</h4>
-          <p class="simple-card__body margin-bottom-1">Hire agency-experienced talent. Manage unlimited clients, projects and contractors all in one place.</p>
+          <p class="simple-card__body margin-bottom-1">Hire agency-experienced talent. Manage unlimited clients, projects, and contractors all in one place.</p>
           <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
         </div>
       </div>
@@ -115,7 +115,7 @@ permalink: "/"
       <div class="cell medium-6">
         <img class="esteemed-talent-logo margin-bottom-1" src="/img/esteemed-talent-logo.svg">
         <h3 class="margin-bottom-1 width-75"><span class="u-text-medium">You plan digital projects every day. Plan your team with</span> esteemed talent.</h3>
-        <p class="h6 margin-bottom-2">By combining human insight with cutting-edge tools and automation, <strong>esteemed talent</strong> powers your staffing landscape. Streamline your delivery model, grow with confidence and get reliable talent on-demand.</p>
+        <p class="h6 margin-bottom-2">By combining human insight with cutting-edge tools and automation, <strong>esteemed talent</strong> powers your staffing landscape. Streamline your delivery model, grow with confidence, and get reliable talent on-demand.</p>
         <p class="h6 margin-bottom-2">Your esteemed team is made up of experienced managers and engineers who can help you achieve your goals.</p>
         <a href="#contact-form" href="" class="button black button__small">Subscribe Now</a>
       </div>
