--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@ pagination:
 {% assign featured_posts = site.posts | where:'featured', true | sort: 'date' | reverse %}
 
 <div class="grid-container page--blog">
-  <h1 class="u-text-bold main-title">Blog</h1>
+  <h1 class="u-text-bold main-title"><i>The Star</i></h1>
   <div class="heading-subtitle">Esteemed makes it easier for you to get flexible jobs, meet like-minded colleagues, and build your business with confidence. But we know your work doesn’t stop there. Our blog is here to help! With insights into all aspects of running a remote business, Esteemed helps you succeed.</div>
   <div class="grid-x align-top grid-padding-x blog-featured-posts">
     {% for featured_post in featured_posts limit:3 %}
