--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@ pagination:
       <a href="{{ featured_post.url }}" class="blog-card blog-featured-card cell medium-4">
         <div class="blog-card__wrapper">
           {% if featured_post.image %}
-            <div class="blog-card__wrapper--image" style="background-image: url('{{ featured_post.image }}'); background-size: cover;">
+            <div class="blog-card__wrapper--image" style="{% if featured_post.color_overlay %}background-color:{{ featured_post.color_overlay }}; background-blend-mode: multiply; {% endif %} background-image: url('{{ featured_post.image }}'); background-size: cover;">
             </div>
           {% endif %}
           <div class="blog-card__bottom">
@@ -45,7 +45,7 @@ pagination:
     <a href="{{ post.url }}" class="blog-card cell small-6 medium-4">
         <div class="blog-card__wrapper">
           {% if post.image %}
-            <div class="blog-card__wrapper--image" style="background-image: url('{{ post.image }}'); background-size: cover;">
+            <div class="blog-card__wrapper--image" style="{% if post.color_overlay %}background-color:{{ post.color_overlay }}; background-blend-mode: multiply; {% endif %} background-image: url('{{ post.image }}'); background-size: cover;">
             </div>
           {% else %}
             <div class="blog-card__wrapper--image" style="background-image: url('/img/blog-performance.jpg'); background-size: cover;">
