--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 ---
-title: Blogs
+title: The Star
 description: If you're growing your business, looking for opportunities, or learning new skills, we're here to help you. Our blog aims to provide advice, support, and the right tools to get you started.
 permalink: /blog/
 pagination:
