Fix htmlproofer errors

--- a/company.html
+++ b/company.html
@@ -19,21 +19,21 @@ permalink: "/company/"
       <div class="grid-x grid-padding-x">
         <div class="cell medium-4">
           <div class="simple-card simple-card--narrow">
-            <div class="simple-card__image text-center"><img src="/img/esteemed-results.svg"></div>
+            <div class="simple-card__image text-center"><img src="/img/esteemed-results.svg" alt="Esteemed results"></div>
             <h4 class="simple-card__header text-center u-text-bold">Results</h4>
             <p class="simple-card__body text-center">Work can be challenging. Esteemed works tirelessly to provide tools that increase effectiveness in the workplace and the quality of life of our users.</p>
           </div>
         </div>
         <div class="cell medium-4">
           <div class="simple-card simple-card--narrow">
-            <div class="simple-card__image text-center"><img src="/img/esteemed-passion.svg"></div>
+            <div class="simple-card__image text-center"><img src="/img/esteemed-passion.svg" alt="Esteemed passion"></div>
             <h4 class="simple-card__header u-text-bold text-center">Passion</h4>
             <p class="simple-card__body text-center">We search for team members who have a passion for solving problems for clients, while collaborating with and mentoring fellow colleagues.</p>
           </div>
         </div>
         <div class="cell medium-4">
           <div class="simple-card simple-card--narrow">
-            <div class="simple-card__image text-center"><img src="/img/esteemed-simplicity.svg"></div>
+            <div class="simple-card__image text-center"><img src="/img/esteemed-simplicity.svg" alt="Esteemed simplicity"></div>
             <h4 class="simple-card__header u-text-bold text-center">Simplicity</h4>
             <p class="simple-card__body text-center">With the workplace becoming increasingly complex, we believe access to advice, support and the right tools can help make all the difference.</p>
           </div>
@@ -59,25 +59,25 @@ permalink: "/company/"
     <div class="grid-x align-center-middle">
       <div class="image-card grid-margin-x">
         <div class="image-card__image">
-          <img src="/img/fpo-1.png">
+          <img src="/img/fpo-1.png" alt="Esteemed developer">
         </div>
         <div class="image-card__image">
-          <img src="/img/fpo-3.png">
+          <img src="/img/fpo-3.png" alt="Esteemed developer">
         </div>
         <div class="image-card__image">
-          <img src="/img/fpo-6.png">
+          <img src="/img/fpo-6.png" alt="Esteemed developer">
         </div>
       </div>
       <div class="grid-x align-center-middle">
         <div class="image-card grid-margin-x">
           <div class="image-card__image">
-            <img src="/img/fpo-5.png">
+            <img src="/img/fpo-5.png" alt="Esteemed developer">
           </div>
           <div class="image-card__image">
-            <img src="/img/fpo-4.png">
+            <img src="/img/fpo-4.png" alt="Esteemed developer">
           </div>
           <div class="image-card__image">
-            <img src="/img/fpo-2.png">
+            <img src="/img/fpo-2.png" alt="Esteemed developer">
           </div>
         </div>
       </div>
@@ -93,19 +93,19 @@ permalink: "/company/"
     <div class="grid-x">
       <div class="cell medium-4">
         <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/esteemed-open-source-icon.svg"></div>
+          <div class="simple-card__image text-center"><img src="/img/esteemed-open-source-icon.svg" alt="Esteemed open source"></div>
           <p class="simple-card__body text-center">Open Source<br>Software</p>
         </div>
       </div>
       <div class="cell medium-4">
         <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/esteemed-open-roadmap-icon.svg"></div>
+          <div class="simple-card__image text-center"><img src="/img/esteemed-open-roadmap-icon.svg" alt="Esteemd roadmap"></div>
           <p class="simple-card__body text-center">Open Product <br>Roadmap</p>
         </div>
       </div>
       <div class="cell medium-4">
         <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/esteemed-open-organization-icon.svg"></div>
+          <div class="simple-card__image text-center"><img src="/img/esteemed-open-organization-icon.svg" alt="Esteemed open organization"></div>
           <p class="simple-card__body text-center">Open Partnerships<br>and Organization</p>
         </div>
       </div>
