--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ permalink: "/"
         <a href="#contact-form" class="button button__small">Get Started Now</a>
       </div>
       <div class="cell medium-6 small-order-1 medium-order-2 small-margin-bottom-2">
-        <img src="/img/main-hero.svg">
+        <img src="/img/main-hero.svg" alt="Hero image">
       </div>
     </div>
   </div>
@@ -31,7 +31,7 @@ permalink: "/"
     </div>
     <div class="grid-x grid-padding-x align-middle">
       <div class="cell medium-6 text-center small-margin-bottom-2">
-        <img class="width-75" src="/img/mobile-profiles.svg">
+        <img class="width-75" src="/img/mobile-profiles.svg" alt="Mobile profiles">
       </div>
       <div class="cell medium-6">
         <h3 class="u-text-medium">Talent Management</h3>
@@ -53,7 +53,7 @@ permalink: "/"
         <a href="#contact-form" class="button__no-bg" href="">Subscribe now</a>
       </div>
       <div class="cell medium-6 small-order-1 medium-order-2 small-margin-bottom-2">
-        <img src="/img/desktop-slide.svg">
+        <img src="/img/desktop-slide.svg" alt="Esteemed Slack">
       </div>
     </div>
   </div>
@@ -63,7 +63,7 @@ permalink: "/"
   <div class="grid-container">
     <div class="grid-x grid-padding-x align-middle">
       <div class="cell medium-6 text-center small-margin-bottom-2">
-        <img class="width-75" src="/img/trusted-advisors.svg">
+        <img class="width-75" src="/img/trusted-advisors.svg" alt="Esteemed trusted advisors">
       </div>
       <div class="cell medium-6">
         <h3 class="u-text-medium">Trusted advisors</h3>
@@ -83,7 +83,7 @@ permalink: "/"
     <div class="grid-x grid-padding-x text-center">
       <div class="cell medium-4">
         <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/icon-brands.svg"></div>
+          <div class="simple-card__image text-center"><img src="/img/icon-brands.svg" alt="Esteemed for brands"></div>
           <h4 class="simple-card__header u-text-bold">For Brands</h4>
           <p class="simple-card__body margin-bottom-1">Scale digital teams quickly with access to 10,000+ pre-screened contractors in hard-to-hire categories.</p>
           <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
@@ -91,7 +91,7 @@ permalink: "/"
       </div>
       <div class="cell medium-4">
         <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/icon-agencies.svg"></div>
+          <div class="simple-card__image text-center"><img src="/img/icon-agencies.svg" alt="Esteemed for agencies"></div>
           <h4 class="simple-card__header u-text-bold">For Agencies</h4>
           <p class="simple-card__body margin-bottom-1">Hire agency-experienced talent. Manage unlimited clients, projects, and contractors all in one place.</p>
           <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
@@ -99,7 +99,7 @@ permalink: "/"
       </div>
       <div class="cell medium-4">
         <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/icon-talent.svg"></div>
+          <div class="simple-card__image text-center"><img src="/img/icon-talent.svg" alt="Esteemed for talent"></div>
           <h4 class="simple-card__header u-text-bold">For Talent</h4>
           <p class="simple-card__body margin-bottom-1">Build pipelines to top agencies and brands. Find quality projects and get paid quickly.</p>
           <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
@@ -113,14 +113,14 @@ permalink: "/"
   <div class="grid-container">
     <div class="grid-x grid-padding-x align-middle">
       <div class="cell medium-6">
-        <img class="esteemed-talent-logo margin-bottom-1" src="/img/esteemed-talent-logo.svg">
+        <img class="esteemed-talent-logo margin-bottom-1" src="/img/esteemed-talent-logo.svg" alt="Esteemed talent">
         <h3 class="margin-bottom-1 width-75"><span class="u-text-medium">You plan digital projects every day. Plan your team with</span> esteemed talent.</h3>
         <p class="h6 margin-bottom-2">By combining human insight with cutting-edge tools and automation, <strong>esteemed talent</strong> powers your staffing landscape. Streamline your delivery model, grow with confidence, and get reliable talent on-demand.</p>
         <p class="h6 margin-bottom-2">Your esteemed team is made up of experienced managers and engineers who can help you achieve your goals.</p>
         <a href="#contact-form" href="" class="button black button__small">Subscribe Now</a>
       </div>
       <div class="cell medium-6">
-        <img src="/img/digital_projects_pair_of_coders.svg">
+        <img src="/img/digital_projects_pair_of_coders.svg" alt="Paired programming">
       </div>
     </div>
   </div>
@@ -136,15 +136,15 @@ permalink: "/"
         <nav class="orbit-bullets">
           <button class="is-active" data-slide="0">
             <span class="show-for-sr">Oomph</span><span class="show-for-sr">Current Slide</span>
-            <img src="/img/logo-oomph.svg">
+            <img src="/img/logo-oomph.svg" alt="Oomph">
           </button>
           <button data-slide="1">
             <span class="show-for-sr">Avionos</span>
-            <img src="/img/logo-avionos.svg">
+            <img src="/img/logo-avionos.svg" alt="Avionos">
           </button>
           <button data-slide="2">
             <span class="show-for-sr">FreshForm</span>
-            <img src="/img/logo-freshform.svg">
+            <img src="/img/logo-freshform.svg" alt="Freshform">
           </button>
         </nav>
         <div class="orbit-container__wrapper align-center-middle">
