--- a/learn-more.html
+++ b/learn-more.html
@@ -19,25 +19,25 @@ layout: blank
 
 <div class="row" style="margin:auto">
   <div class="column">
-<a class="button" href="esteemed.io/sales/schedule-demo">Schedule Demo</a>
+<a class="button" href="/sales/schedule-demo/">Schedule Demo</a>
   </div>
 </div>
 
 <div class="row" style="margin:auto">
   <div class="column">
-<a class="button" href="esteemed.io/blog">Blog</a>
+<a class="button" href="/blog/">Blog</a>
   </div>
 </div>
 
  <div class="row" style="margin:auto"> 
   <div class="column">
-  <a class="button" href="app.wpcontractors.com/search/jobs">WordPress Jobs</a>
+  <a class="button" href="https://app.wpcontractors.com/search/jobs">WordPress Jobs</a>
     </div>
 </div>
 
 <div class="row" style="margin:auto">
   <div class="column">
- <a class="button" href="app.drupalcontractors.com/search/jobs">Drupal Jobs</a>
+ <a class="button" href="https://app.drupalcontractors.com/search/jobs">Drupal Jobs</a>
   </div>
 </div>
 </div>
