Remove unnecessary type attribute for script tags

--- a/schedule-demo.html
+++ b/schedule-demo.html
@@ -12,12 +12,12 @@ class: "page__schedule-demo"
         <p>Schedule a demo of Esteemed Talent today. In 45 minutes we'll walk you through how our system increases quality and efficiency of hiring digital pros while providing instant access to expert advisors to help scale your business.</p>
         <!-- Calendly inline widget begin -->
         <div class="calendly-inline-widget" data-url="https://calendly.com/demo-esteemed/45min?hide_event_type_details=1&text_color=231f20&primary_color=4389c8" style="min-width:320px;height:670px;"></div>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+        <script src="https://assets.calendly.com/assets/external/widget.js"></script>
         <!-- Calendly inline widget end -->
         <h2 class="margin-top-3 text-center">Watch a 2 minute video on what we do</h2>
         <div class="margin-top-2 text-center video__wrapper">
           <iframe src="https://spark.adobe.com/video/Z6OKyFDuBmY5h/embed" width="960" height="540" frameborder="0" allowfullscreen></iframe>
-        </div>       
+        </div>
       </div>
 
       <div class="cell align-center-middle margin-top-2 grid-x">
