--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@ permalink: /contact/
       <div class="cell">
         <h1 class="margin-bottom-2">Contact Us</h1>
         <!--[if lte IE 8]>
-        <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+        <script charset="utf-8" src="//js.hsforms.net/forms/v2-legacy.js"></script>
         <![endif]-->
-        <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+        <script charset="utf-8" src="//js.hsforms.net/forms/v2.js"></script>
         <script>
         hbspt.forms.create({
         portalId: "7487839",
