Remove duplicate href attributes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ permalink: "/"
         <h3 class="u-text-medium">Talent Management</h3>
         <p class="h5 margin-bottom-2">The Esteemed Talent Network provides instant access to thousands of pre-screened digital professionals in hard-to-hire specialties.</p>
         <p class="h5 margin-bottom-2">Our experienced Technical Leads present qualified talent and collaborate closely to ensure clients find the right fit fast.</p>
-        <a href="#contact-form" class="button__no-bg" href="">Get Started</a>
+        <a href="#contact-form" class="button__no-bg">Get Started</a>
       </div>
     </div>
   </div>
@@ -50,7 +50,7 @@ permalink: "/"
         <h3 class="u-text-medium">Expand capacity instantly</h3>
         <p class="h5 margin-bottom-2">Esteemed collaborates via the tools you already use like Slack. All subscribers receive a dedicated channel and Team Lead.</p>
         <p class="h5 margin-bottom-2">Make requests and be connected to qualified candidates within 30 minutes* and be working within the hour, guaranteed.</p>
-        <a href="#contact-form" class="button__no-bg" href="">Subscribe now</a>
+        <a href="#contact-form" class="button__no-bg">Subscribe now</a>
       </div>
       <div class="cell medium-6 small-order-1 medium-order-2 small-margin-bottom-2">
         <img src="/img/desktop-slide.svg" alt="Esteemed Slack">
@@ -69,7 +69,7 @@ permalink: "/"
         <h3 class="u-text-medium">Trusted advisors</h3>
         <p class="h5 margin-bottom-2">Esteemed offers access to managers from technical team leads to product or category consultants, to fractional executives.</p>
         <p class="h5 margin-bottom-2">Whatever resources and advice you need to grow your business, just make a request and we'll make the connection.</p>
-        <a href="/pricing/" class="button__no-bg" href="">Learn more</a>
+        <a href="/pricing/" class="button__no-bg">Learn more</a>
       </div>
     </div>
   </div>
@@ -86,7 +86,7 @@ permalink: "/"
           <div class="simple-card__image text-center"><img src="/img/icon-brands.svg" alt="Esteemed for brands"></div>
           <h4 class="simple-card__header u-text-bold">For Brands</h4>
           <p class="simple-card__body margin-bottom-1">Scale digital teams quickly with access to 10,000+ pre-screened contractors in hard-to-hire categories.</p>
-          <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
+          <a href="/pricing/" class="button__no-bg align-center-middle">Learn More</a>
         </div>
       </div>
       <div class="cell medium-4">
@@ -94,7 +94,7 @@ permalink: "/"
           <div class="simple-card__image text-center"><img src="/img/icon-agencies.svg" alt="Esteemed for agencies"></div>
           <h4 class="simple-card__header u-text-bold">For Agencies</h4>
           <p class="simple-card__body margin-bottom-1">Hire agency-experienced talent. Manage unlimited clients, projects, and contractors all in one place.</p>
-          <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
+          <a href="/pricing/" class="button__no-bg align-center-middle">Learn More</a>
         </div>
       </div>
       <div class="cell medium-4">
@@ -102,7 +102,7 @@ permalink: "/"
           <div class="simple-card__image text-center"><img src="/img/icon-talent.svg" alt="Esteemed for talent"></div>
           <h4 class="simple-card__header u-text-bold">For Talent</h4>
           <p class="simple-card__body margin-bottom-1">Build pipelines to top agencies and brands. Find quality projects and get paid quickly.</p>
-          <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
+          <a href="/pricing/" class="button__no-bg align-center-middle">Learn More</a>
         </div>
       </div>
     </div>
@@ -117,7 +117,7 @@ permalink: "/"
         <h3 class="margin-bottom-1 width-75"><span class="u-text-medium">You plan digital projects every day. Plan your team with</span> esteemed talent.</h3>
         <p class="h6 margin-bottom-2">By combining human insight with cutting-edge tools and automation, <strong>esteemed talent</strong> powers your staffing landscape. Streamline your delivery model, grow with confidence, and get reliable talent on-demand.</p>
         <p class="h6 margin-bottom-2">Your esteemed team is made up of experienced managers and engineers who can help you achieve your goals.</p>
-        <a href="#contact-form" href="" class="button black button__small">Subscribe Now</a>
+        <a href="#contact-form" class="button black button__small">Subscribe Now</a>
       </div>
       <div class="cell medium-6">
         <img src="/img/digital_projects_pair_of_coders.svg" alt="Paired programming">
