Remove deprecated charset attribute

--- a/partner-registration.html
+++ b/partner-registration.html
@@ -9,7 +9,7 @@ permalink: "/partners/partner-registration/"
     <div class="grid-x grid-padding-x align-top">
       <div class="cell">
         <h1 class="margin-bottom-2">Internal Partner Application</h1>
-        <script charset="utf-8" src="//js.hsforms.net/forms/shell.js"></script>
+        <script src="//js.hsforms.net/forms/shell.js"></script>
         <script>
           hbspt.forms.create({
             portalId: "7487839",
