HTML encode mailto link

--- a/company.html
+++ b/company.html
@@ -8,7 +8,7 @@ permalink: "/company/"
 <section id="section-01" class="section our-team">
   <div class="grid-container">
     <h1 class="text-center u-trailer u-text-bold"><strong>We’re on a mission<br></strong> to help people around the world<br><strong>work smarter not harder.</strong></h1>
-    <div class="cell text-center"><a href="mailto:jobs@esteemed.io?subject=Opportunities at Esteemed&body=Dear future Esteemed Colleague,%0D%0A%0D%0AI am writing with interest in exploring opportunities with your team. I have attached a recent copy of my resume for your review. I look forward to further discussion.%0D%0A%0D%0AThank you!" class="button" target="_blank">Join our Team</a></div>
+    <div class="cell text-center"><a href="mailto:jobs@esteemed.io?subject=Opportunities%20at%20Esteemed&body=Dear%20future%20Esteemed%20Colleague,%0D%0A%0D%0AI%20am%20writing%20with%20interest%20in%20exploring%20opportunities%20with%20your%20team.%20I%20have%20attached%20a%20recent%20copy%20of%20my%20resume%20for%20your%20review.%20I%20look%20forward%20to%20further%20discussion.%0D%0A%0D%0AThank%20you!" class="button" target="_blank">Join our Team</a></div>
   </div>
 </section>
 <section id="section-02" class="section our-value">
@@ -127,7 +127,7 @@ permalink: "/company/"
       <div class="cell large-6">
       </div>
       <div class="cell large-6 u-leader">
-        <a href="mailto:jobs@esteemed.io?subject=Opportunities at Esteemed&body=Dear future Esteemed Colleague,%0D%0A%0D%0AI am writing with interest in exploring opportunities with your team. I have attached a recent copy of my resume for your review. I look forward to further discussion.%0D%0A%0D%0AThank you!" class="button" target="_blank">Join our Team</a>
+        <a href="mailto:jobs@esteemed.io?subject=Opportunities%20at%20Esteemed&body=Dear%20future%20Esteemed%20Colleague,%0D%0A%0D%0AI%20am%20writing%20with%20interest%20in%20exploring%20opportunities%20with%20your%20team.%20I%20have%20attached%20a%20recent%20copy%20of%20my%20resume%20for%20your%20review.%20I%20look%20forward%20to%20further%20discussion.%0D%0A%0D%0AThank%20you!" class="button" target="_blank">Join our Team</a>
       </div>
     </div>
     </div>
