Updated meta-data for blog
Alex, you can ignore this meta-data update.

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 ---
 title: The Star
-description: If you're growing your business, looking for opportunities, or learning new skills, we're here to help you. Our blog aims to provide advice, support, and the right tools to get you started.
+description: The Star offers tips on growing your business, searching for opportunities, and learning new skills.
 permalink: /blog/
 pagination:
   enabled: true
