Add video anchor on schedule demo page

--- a/schedule-demo.html
+++ b/schedule-demo.html
@@ -14,7 +14,7 @@ class: "page__schedule-demo"
         <div class="calendly-inline-widget" data-url="https://calendly.com/demo-esteemed/45min?hide_event_type_details=1&text_color=231f20&primary_color=4389c8" style="min-width:320px;height:670px;"></div>
         <script src="https://assets.calendly.com/assets/external/widget.js"></script>
         <!-- Calendly inline widget end -->
-        <h2 class="margin-top-3 text-center">Watch a 2 minute video on what we do</h2>
+        <h2 id="video" class="margin-top-3 text-center">Watch a 2 minute video on what we do</h2>
         <div class="margin-top-2 text-center video__wrapper">
           <iframe src="https://spark.adobe.com/video/Z6OKyFDuBmY5h/embed" width="960" height="540" frameborder="0" allowfullscreen></iframe>
         </div>
