Reduce text size of h2 on company page

--- a/company.html
+++ b/company.html
@@ -48,7 +48,7 @@ permalink: "/company/"
         <h1 class="u-text-bold">Our people</h1>
       </div>
       <div class="cell large-6">
-        <h2>We bring <i>colleagues</i> around the world together for conversations, collaboration on work and networking.</h2>
+        <h2 class="h3">We bring <i>colleagues</i> around the world together for conversations, collaboration on work and networking.</h2>
       </div>
     </div>
     </div>
@@ -120,7 +120,7 @@ permalink: "/company/"
         <h1 class="u-text-bold">We're growing</h1>
       </div>
       <div class="cell large-6 ">
-        <h2>We are looking to connect with like minded individuals to join us on this incredible journey.</h2>
+        <h2 class="h3">We are looking to connect with like minded individuals to join us on this incredible journey.</h2>
       </div>
     </div>
     <div class="grid-x align-center-middle u-leader">
