[ES-75] Update metadata

--- a/company.html
+++ b/company.html
@@ -1,7 +1,7 @@
 ---
-title: "Company"
-meta:
-  description: "Company"
+title: "Our Company"
+description: "Esteemed is a workforce enablement solutions company. We are on a mission to simplify work, and make it more rewarding, flexible, and fun. Learn more about our vision. "
+image: "/img/our-company.png"
 permalink: "/company/"
 ---
 
