--- a/partner-registration.html
+++ b/partner-registration.html
@@ -1,6 +1,7 @@
 ---
-title: "Internal Partner Application"
-description: "Esteemed Internal Partners have access to discount pricing. They can access hundreds on Slack, and thousands in the Talent Network. So the next time a juicy project comes in you'd rather not pass by. Star talent is at your finger tips."
+title: "Partner with Us"
+description: "Become an internal partner, and get star talent for your next big project. Join today and gain access to discount pricing and the resources you need to grow."
+image: "/img/partners.png"
 permalink: "/partners/partner-registration/"
 ---
 
