--- a/presentations-sales-deck.html
+++ b/presentations-sales-deck.html
@@ -1,5 +1,6 @@
 ---
-title: "Sales Deck"
+title: Sales Deck
+description: Esteemed Talent is a new type of staffing service. Access to 13,000+ digital pros available for hire via the tools you already use.
 permalink: "/presentations/sales-deck/"
 layout: single
 class: page__mobile-nav-hidden
