--- a/services.html
+++ b/services.html
@@ -1,7 +1,6 @@
 ---
 title: "Services"
-meta:
-  description: "Services"
+description: Learn more about our services, and sign up today.
 permalink: "/services"
 ---
 
