--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 ---
-title: The Star
-description: The Star offers tips on growing your business, searching for opportunities, and learning new skills.
+title: Blog
+description: If you’re growing your business, looking for opportunities, or learning new skills, we’re here to help you. Our blog, The Star, provides advice, support, and guidance on everything you need to get started and navigate the path to success..
+image: "/img/blog.png"
 permalink: /blog/
 pagination:
   enabled: true
