--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Welcome to Esteemed"
-description: "Esteemed is a new type of staffing service that pairs the power of technology and community to automate and improve hiring experts in high demand niche markets. This along with a team of humans skilled in each specific area to assist you every step of the way."
+description: "Esteemed Talent is a new type of staffing service. Access to 13,000+ digital pros available for hire via the tools you already use."
 permalink: "/"
 ---
 
