--- a/pricing.html
+++ b/pricing.html
@@ -1,4 +1,6 @@
 ---
-title: Pricing
+title: Pricing and Plans
+description: Get more details on Esteemed's pricing. We analyze your business and then craft a plan that's right for your needs.
+image: "/img/pricing-plans.png"
 permalink: /pricing/
 ---
