[est-75] Change blog description

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 ---
 title: Blog
-description: If you’re growing your business, looking for opportunities, or learning new skills, we’re here to help you. Our blog, The Star, provides advice, support, and guidance on everything you need to get started and navigate the path to success..
+description: If you’re growing your business, looking for opportunities, or learning new skills, we’re here to help you. Our blog aims to provide advice, support, and the right tools to get started.
 image: "/img/blog.png"
 permalink: /blog/
 pagination:
