Update gradient on blog post images

--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@ pagination:
       <a href="{{ featured_post.url }}" class="blog-card blog-featured-card cell medium-4">
         <div class="blog-card__wrapper">
           {% if featured_post.thumbnail %}
-            <div class="blog-card__wrapper--image" style="{% if featured_post.color_overlay %}background-color:{{ featured_post.color_overlay }}; background-blend-mode: multiply; {% endif %} background-image: url('{{ featured_post.thumbnail }}'); background-size: cover;">
+            <div class="blog-card__wrapper--image" style="{% if featured_post.color_overlay %}background-image:linear-gradient(0deg, {{ featured_post.color_overlay }} 25%, rgba(0, 0, 0, 0)), url('{{ featured_post.thumbnail }}');{% else %}background-image: url('{{ featured_post.thumbnail }}');{% endif %} background-size: cover;">
             </div>
           {% endif %}
           <div class="blog-card__bottom">
@@ -50,7 +50,7 @@ pagination:
     <a href="{{ post.url }}" class="blog-card cell small-6 medium-4">
       <div class="blog-card__wrapper">
         {% if post.thumbnail %}
-          <div class="blog-card__wrapper--image" style="{% if post.color_overlay %}background-color:{{ post.color_overlay }}; background-blend-mode: multiply; {% endif %} background-image: url('{{ post.thumbnail }}'); background-size: cover;">
+          <div class="blog-card__wrapper--image" style="{% if post.color_overlay %}background-image:linear-gradient(0deg, {{ post.color_overlay }} 25%, rgba(255, 255, 255, 0)), url('{{ post.thumbnail }}');{% else %}background-image: url('{{ featured_post.thumbnail }}');{% endif %} background-size: cover;">
           </div>
         {% else %}
           <div class="blog-card__wrapper--image" style="background-image: url('/img/blog-performance.jpg'); background-size: cover;">
