Add additional text to partner registration intro

--- a/partner-registration.html
+++ b/partner-registration.html
@@ -10,6 +10,8 @@ permalink: "/partners/partner-registration/"
     <div class="grid-x grid-padding-x align-top">
       <div class="cell">
         <h1 class="margin-bottom-2">Internal Partner Application</h1>
+        <p>At Esteemed, we've cultivated a network of +13,000 digital experts. Now, we want to share those resources with you—as partners. We're here to help you tap into new revenue streams, find talent, and meet your customers' needs.</p>
+        <p>For all qualified partners, we provide consulting, strategy, resources, and support. If you're a developer in need or an agency with under 5 employees, we'd love to chat. To get started, fill out the form below. Once approved, we'll invite you to Slack. A dedicated Resource Manager will review your application, and we'll get you the help you need.</p>
         <script src="//js.hsforms.net/forms/shell.js"></script>
         <script>
           hbspt.forms.create({
