--- a/jobs/index.html
+++ b/jobs/index.html
@@ -3,13 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>Career Portal</title>
-  <base href=".">  <link rel="stylesheet" href="./static/custom.css" />
-
+  <link rel="stylesheet" href="/jobs/static/custom.css" />
+  <link rel="stylesheet" href="/css/esteemed.css" />
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+  <script src="/js/esteemed.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.css"></head>
 <body>
-  <app-root><novo-loading style="position: absolute; margin: auto; top: 0; left: 0; right: 0; bottom: 0;display: flex;justify-content: center;align-items: center;">
+  <h2 class="job-title">Open Jobs</h2>
+  <app-root class="job-content-wrap"><novo-loading style="position: absolute; margin: auto; top: 0; left: 0; right: 0; bottom: 0;display: flex;justify-content: center;align-items: center;">
     <span class="dot"></span>
     <span class="dot"></span>
     <span class="dot"></span>
