Redirect pricing page to get-a-quote

--- a/quote.html
+++ b/quote.html
@@ -3,6 +3,8 @@ title: Get a quote
 description: Get more details on Esteemed's pricing. We analyze your business and then craft a plan that's right for your needs.
 image: "/img/pricing-plans.png"
 permalink: /get-a-quote/
+redirect_from:
+  - /pricing/
 ---
 
 {% assign partners = site.data.partners %}
