Add flag for contact form display

--- a/partner-registration.html
+++ b/partner-registration.html
@@ -2,6 +2,7 @@
 title: "Partner with Us"
 description: "Become an internal partner, and get star talent for your next big project. Join today and gain access to discount pricing and the resources you need to grow."
 image: "/img/partners.png"
+contact_form: false
 permalink: "/partners/partner-registration/"
 ---
 
