--- a/quote.html
+++ b/quote.html
@@ -2,6 +2,7 @@
 title: Get a quote
 description: Get more details on Esteemed's pricing. We analyze your business and then craft a plan that's right for your needs.
 image: "/img/pricing-plans.png"
+contact_form: false
 permalink: /get-a-quote/
 redirect_from:
   - /pricing/
