--- a/member-compensation-plan.html
+++ b/member-compensation-plan.html
@@ -1,6 +1,7 @@
 ---
 title: Member Compensation Plan
 description: 
+contact_form: false
 permalink: "/member-compensation-plan/"
 date: '2020-11-12 00:12:21 +0000'
 author: casey-horgan
